--- a/Aquaplay/index.html
+++ b/Aquaplay/index.html
@@ -8,9 +8,12 @@
 		<canvas id="dcanvas" style="float:left;position:relative;" width="900" height="675">Seu browser não suporta HTML5</canvas>
 	</body>
 	<script src="js/createjs-2013.02.12.min.js" type="text/javascript"></script>
+	<script src="js/Filter.js" type="text/javascript"></script>
+	<script src="js/AlphaMaskFilter.js" type="text/javascript"></script>
 	<script src="js/Box2dWeb-2.1.a.3.min.js" type="text/javascript"></script>
 	<script src="js/util.js" type="text/javascript"></script>
 	<script src="js/types.js" type="text/javascript"></script>
+	<script src="js/loadingscreen.js" type="text/javascript"></script>
 	<script src="js/mainmenu.js" type="text/javascript"></script>
 	<script src="js/stageone.js" type="text/javascript"></script>
 	<script src="js/stagetwo.js" type="text/javascript"></script>
