--- a/Aquaplay/index.html
+++ b/Aquaplay/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body style="background-color:black;">
 		<canvas id="canvas" style="background-color:white;" width="900" height="675">Seu browser não suporta HTML5</canvas>
-		<canvas id="dcanvas" style="float:left;position:relative;" width="900" height="675">Seu browser não suporta HTML5</canvas>
+		<canvas id="dcanvas" style="" width="900" height="675">Seu browser não suporta HTML5</canvas>
 	</body>
 	<script src="js/createjs-2013.02.12.min.js" type="text/javascript"></script>
 	<script src="js/Filter.js" type="text/javascript"></script>
@@ -13,8 +13,10 @@
 	<script src="js/Box2dWeb-2.1.a.3.min.js" type="text/javascript"></script>
 	<script src="js/util.js" type="text/javascript"></script>
 	<script src="js/types.js" type="text/javascript"></script>
+	<script src="js/screen.js" type="text/javascript"></script>
 	<script src="js/loadingscreen.js" type="text/javascript"></script>
 	<script src="js/mainmenu.js" type="text/javascript"></script>
+	<script src="js/stage.js" type="text/javascript"></script>
 	<script src="js/stageone.js" type="text/javascript"></script>
 	<script src="js/stagetwo.js" type="text/javascript"></script>
 	<script src="js/endstagepopup.js" type="text/javascript"></script>
