--- a/Aquaplay/index.html
+++ b/Aquaplay/index.html
@@ -4,7 +4,7 @@
 		<title></title>
 	</head>
 	<body style="background-color:black;">
-		<canvas id="canvas" style="background-color:white;" width="900" height="675">Seu browser não suporta HTML5</canvas>
+		<canvas id="canvas" style="background-color:#011b2d;" width="900" height="675">Seu browser não suporta HTML5</canvas>
 		<canvas id="dcanvas" style="" width="900" height="675">Seu browser não suporta HTML5</canvas>
 	</body>
 	<script src="js/createjs-2013.02.12.min.js" type="text/javascript"></script>
@@ -19,6 +19,7 @@
 	<script src="js/stage.js" type="text/javascript"></script>
 	<script src="js/stageone.js" type="text/javascript"></script>
 	<script src="js/stagetwo.js" type="text/javascript"></script>
+	<script src="js/stagethree.js" type="text/javascript"></script>
 	<script src="js/endstagepopup.js" type="text/javascript"></script>
 	<script src="js/game.js" type="text/javascript"></script>
 </html>
