--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/index.css">
-		<!--<link rel="stylesheet" href="css/bootstrap-theme.min.css">-->
 		<script src="js/vendor/modernizr-2.8.0.min.js"></script>
 	</head>
 	<body>
@@ -28,9 +27,9 @@
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
 						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
+						<span class="icon-bar"> </span>
+						<span class="icon-bar"> </span>
+						<span class="icon-bar"> </span>
 					</button>
 					<a class="navbar-brand" href="#">Lucas Bittencourt</a>
 				</div>
@@ -42,7 +41,7 @@
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li>
-							<a href="http://www.github.com/lukebitts" target="_blank"><i class="fa fa-github fa-lg fa-fw"></i> Github</a>
+							<a href="http://www.github.com/lukebitts" target="_blank"><i class="fa fa-github fa-lg fa-fw"> </i> Github</a>
 						</li>
 					</ul>
 				</div>
@@ -79,22 +78,22 @@
 						<div class="row">
 							<div class="col-md-3">
 								<p>
-									<div class="portfolio-picture"><img src='http://placekitten.com/g/130/110'/></div> 
+									<!--<div class="portfolio-picture"><img src='http://placekitten.com/g/130/110'/></div>--> 
 								</p>
 							</div>
 							<div class="col-md-3">
 								<p>
-									<div class="portfolio-picture"><img src='http://placekitten.com/g/130/110'/></div> 
+									<!--<div class="portfolio-picture"><img src='http://placekitten.com/g/130/110'/></div>--> 
 								</p>
 							</div>
 							<div class="col-md-3">
 								<p>
-									<div class="portfolio-picture"><img src='http://placekitten.com/g/130/110'/></div> 
+									<!--<div class="portfolio-picture"><img src='http://placekitten.com/g/130/110'/></div>-->
 								</p>
 							</div>
 							<div class="col-md-3">
 								<p>
-									<div class="portfolio-picture"><img src='http://placekitten.com/g/130/110'/></div>
+									<!--<div class="portfolio-picture"><img src='http://placekitten.com/g/130/110'/></div>-->
 								</p>
 							</div>
 						</div>
@@ -104,8 +103,7 @@
 			</div>
 		</div>
 
-		<div class="container">
-			<!-- Example row of columns -->
+		<div class="container works">
 			<div class="row">
 				<div class="col-md-4">
 					<h2>Heading</h2>
@@ -135,16 +133,18 @@
 					</p>
 				</div>
 			</div>
-
-			<hr>
-
-			<footer>
-				<p>
-					&copy; Company 2014
-				</p>
-			</footer>
 		</div>
-		<!-- /container -->
+		<div class="window"> </div>
+		<div class="container">
+		    <hr>
+		    <footer>
+                <p>
+                    &copy; Company 2014
+                </p>
+            </footer>
+		</div>
+		
+		
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script>
