--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 	</head>
 	<body>
+
 		<div class="content">
 			<div class="centralizer">
 				<header>
@@ -33,23 +34,28 @@
 					</nav>
 				</header>
 				<div class="section group">
-					<div class="work col span_1_of_4">
-						<h2>Titulo</h2>
-						<span class="main-tag">HTML5</span>
+					<div id="about" class="col span_2_of_4">
+						<h2>Sobre</h2>
+								<object data="index.html">
+			
+		</object>
+						<p>
+							Nascido e criado em São Paulo, formado Técnico em Informática pela ETEC Camargo Aranha e Tecnólogo em Desenvolvimento de Jogos pela FATEC São Caetano do Sul.
+							Apaixonado por jogos desde criança, apaixonado por criação digital desde que tinha idade suficiente para entender e usar o FrontPage.  
+						</p>
+						<h2>Ferramentas</h2>
+						<p>
+							De todas as linguagens de programação que tive o prazer de conhecer, C++ é definitivamente minha favorita. A maioria dos meus projetos pessoais é escrita em C++ e
+							mesmo conhecendo as vantagens e facilidades de outras linguagens que C++ não oferece, eu sempre acabo voltando para ela. Apesar disso, quando o assunto é projetos
+							profissionais minha escolha é sempre pragramática, Unity3D e C# para o desenvolvimento de jogos e aplicativos iOS/Android e Construct2 para desenvolvimento de jogos HTML5. 
+						</p>
+						<p>
+							Algumas outras linguagens/tecnologias que já utilizei incluem Java, Python, MySQL, PHP, HTML5 e Javascript.
+						</p>
 					</div>
-					<div class="work col span_1_of_4"> </div>
-					<div class="work col span_1_of_4"> </div>
-					<div class="work col span_1_of_4"> </div>
-				</div>
-				<div class="section group">
-					<div class="work col span_1_of_4"> </div>
-					<div class="work col span_1_of_4"> </div>
-					<div class="work col span_1_of_4"> </div>
-					<div class="work col span_1_of_4"> </div>
-				</div>
-				<div class="section group">
-					<div class="work col span_1_of_4"> </div>
-					<div class="work col span_1_of_4"> </div>
+					<div id="profile-pic" class="col span_2_of_4">
+						<img src="images/profile.jpg"/>
+					</div>
 				</div>
 			</div>
 			<footer>
