New layout done

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<link rel="stylesheet" type="text/css" href="css/grid/col.css">
 		<link rel="stylesheet" type="text/css" href="css/grid/4cols.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/works.css">
 	</head>
 	<body>
 		<div class="content">
@@ -27,35 +28,105 @@
 					</div>
 					<h1>Lucas Bittencourt</h1>
 					<nav>
-						<a href="">Trabalhos</a><span>/</span>
-						<a href="">Sobre</a><span>/</span>
-						<a href="">Contato</a>
+						<a href="index.html">Trabalhos</a><span>/</span>
+						<a href="about.html">Sobre</a><span>/</span>
+						<a href="contact.html">Contato</a>
 					</nav>
 				</header>
+				<!--
+					Einstein Maps
+					Toque de Chef
+					Site Unimed
+					Corre Clicô
+					Conte sua História
+					Aquapiratas
+					Site Farofa
+					Cidade dos Blocos
+					Pista Radical
+					Grok
+					Quiz Toda Linda
+				-->
 				<div class="section group">
-					<div class="work col span_1_of_4">
-						<h2>Titulo</h2>
-						<span class="main-tag">HTML5</span>
-					</div>
-					<div class="work col span_1_of_4"> </div>
-					<div class="work col span_1_of_4"> </div>
-					<div class="work col span_1_of_4"> </div>
+					<a href="works/einstein.html" class="col span_1_of_4">
+						<div class="work einsteinmaps ">
+							<h2>Einstein Maps</h2>
+							<span class="main-tag">Unity3D</span>
+						</div>
+					</a>
+					<a href="works/toquedochef.html" class="col span_1_of_4">
+						<div class="work toquedochef">
+							<h2>Toque do Chef</h2>
+							<span class="main-tag">HTML5</span>
+						</div>
+					</a>
+					<a href="works/unimedodonto.html" class="col span_1_of_4">
+						<div class="work unimedodonto">
+							<h2>Unimed Odonto</h2>
+							<span class="main-tag">Web</span>
+						</div>
+					</a>
+					<a href="works/correclico.html" class="col span_1_of_4">
+						<div class="work correclico">
+							<h2>Corre Clicô</h2>
+							<span class="main-tag">HTML5</span>
+						</div>
+					</a>
 				</div>
 				<div class="section group">
-					<div class="work col span_1_of_4"> </div>
-					<div class="work col span_1_of_4"> </div>
-					<div class="work col span_1_of_4"> </div>
-					<div class="work col span_1_of_4"> </div>
+					<a href="works/contesuahistoria.html" class="col span_1_of_4">
+						<div class="work contesuahistoria">
+							<h2>Conte sua História</h2>
+							<span class="main-tag">Unity3D</span>
+						</div>
+					</a>
+					<a href="works/aquapiratas.html" class="col span_1_of_4">
+						<div class="work aquapiratas">
+							<h2>AquaPiratas</h2>
+							<span class="main-tag">HTML5</span>
+						</div>
+					</a>
+					<a href="works/sitefarofastudios.html" class="col span_1_of_4">
+						<div class="work sitefarofastudios">
+							<h2>Site Farofa Studios</h2>
+							<span class="main-tag">Web</span>
+						</div>
+					</a>
+					<a href="works/cidadedosblocos.html" class="col span_1_of_4">
+						<div class="work cidadedosblocos">
+							<h2>Cidade dos Blocos</h2>
+							<span class="main-tag">HTML5</span>
+						</div>
+					</a>
 				</div>
 				<div class="section group">
-					<div class="work col span_1_of_4"> </div>
-					<div class="work col span_1_of_4"> </div>
+					<a href="works/pistaradical.html" class="col span_1_of_4">
+						<div class="work pistaradical">
+							<h2>Pista Radical</h2>
+							<span class="main-tag">HTML5</span>
+						</div>
+					</a>
+					<a href="works/sitegrok.html" class="col span_1_of_4">
+						<div class="work sitegrok">
+							<h2>Site Grok</h2>
+							<span class="main-tag">Web</span>
+						</div>
+					</a>
+					<a href="works/quiztodalinda.html" class="col span_1_of_4">
+						<div class="work quiztodalinda">
+							<h2>Quiz Toda Linda Vale Mirim</h2>
+							<span class="main-tag">Web</span>
+						</div>
+					</a>
 				</div>
 			</div>
 			<footer>
 				<div class="centralizer">
-					Contato: lbittencs@gmail.com <br>
-					github: lukebitts.github.com
+					<span class="fa fa-envelope"> </span> <a href="mailto:lbittencs@gmail.com">lbittencs@gmail.com</a> 
+					<span class="spacer"> </span>
+					<span class="fa fa-github"> </span> <a target="_blank" href="http://github.com/lukebitts">GitHub</a>
+					<span class="spacer"> </span>
+					<span class="fa fa-location-arrow"> </span> São Paulo, Brasil.
+					<p class="copyright">© Todos os direitos reservados.</p>
 				</div>
 			</footer>
 		</div>
