--- a/contact.html
+++ b/contact.html
@@ -34,24 +34,11 @@
 					</nav>
 				</header>
 				<div class="section group">
-					<div id="about" class="col span_2_of_4">
-						<h2>Sobre</h2>
+					<div id="contact" class="col span_4_of_4">
+						<h2>Contato</h2>
 						<p>
-							Nascido e criado em São Paulo, formado Técnico em Informática pela ETEC Camargo Aranha e Tecnólogo em Desenvolvimento de Jogos pela FATEC São Caetano do Sul.
-							Apaixonado por jogos desde criança, apaixonado por criação digital desde que tinha idade suficiente para entender e usar o FrontPage.  
+							Envie um email para <a href="mailto:lbittencs@gmail.com">lbittencs@gmail.com</a> para falar comigo.  
 						</p>
-						<h2>Ferramentas</h2>
-						<p>
-							De todas as linguagens de programação que tive o prazer de conhecer, C++ é definitivamente minha favorita. A maioria dos meus projetos pessoais é escrita em C++ e
-							mesmo conhecendo as vantagens e facilidades de outras linguagens que C++ não oferece, eu sempre acabo voltando para ela. Apesar disso, quando o assunto é projetos
-							profissionais minha escolha é sempre pragramática, Unity3D e C# para o desenvolvimento de jogos e aplicativos iOS/Android e Construct2 para desenvolvimento de jogos HTML5. 
-						</p>
-						<p>
-							Algumas outras linguagens/tecnologias que já utilizei incluem Java, Python, MySQL, PHP, HTML5 e Javascript.
-						</p>
-					</div>
-					<div id="profile-pic" class="col span_2_of_4">
-						<img src="images/profile.jpg"/>
 					</div>
 				</div>
 			</div>
