Added support to different languages, changed the default font to Roboto, fixed work pages, translated everything to english.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 		<!-- @todo Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico">
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-		
+
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/grid/col.css">
 		<link rel="stylesheet" type="text/css" href="css/grid/4cols.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/works.css">
+
+		<script src="js/lang.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div class="content">
@@ -27,106 +30,71 @@
 						<span class="fa fa-code fa-3x"> </span>
 					</div>
 					<h1>Lucas Bittencourt</h1>
-					<nav>
+					<nav lang="pt">
 						<a href="index.html">Trabalhos</a><span>/</span>
 						<a href="about.html">Sobre</a><span>/</span>
 						<a href="contact.html">Contato</a>
 					</nav>
+					<nav lang="en">
+						<a href="index.html">Works</a><span>/</span>
+						<a href="about.html">About</a><span>/</span>
+						<a href="contact.html">Contact</a>
+					</nav>
+					<div id="language-pick">
+						<a href="#" id="lang-pt">Português</a>
+						/
+						<a href="#" id="lang-en">English</a>
+					</div>
 				</header>
 				<!--
+					Mundo Virtual Online
+					Gatópolis 2.0
+					Toque do Chef
 					Einstein Maps
-					Toque de Chef
-					Site Unimed
-					Corre Clicô
-					Conte sua História
-					Aquapiratas
-					Site Farofa
-					Cidade dos Blocos
-					Pista Radical
-					Grok
-					Quiz Toda Linda
 				-->
 				<div class="section group">
-					<a href="works/einstein.html" class="col span_1_of_4">
+					<a href="works/mundovirtual.html" class="col span_4_of_4">
+						<div class="work virtualworld">
+							<h2 lang="pt">Mundo Virtual Online</h2>
+							<h2 lang="en">Virtual Online World</h2>
+							<span class="main-tag">Java / C#</span>
+						</div>
+					</a>
+				</div>
+				<div class="section group">
+					<a href="works/einstein.html" class="col span_2_of_4">
 						<div class="work einsteinmaps ">
 							<h2>Einstein Maps</h2>
 							<span class="main-tag">Unity3D</span>
 						</div>
 					</a>
-					<a href="works/toquedochef.html" class="col span_1_of_4">
+					<a href="works/toquedochef.html" class="col span_2_of_4">
 						<div class="work toquedochef">
-							<h2>Toque do Chef</h2>
-							<span class="main-tag">HTML5</span>
-						</div>
-					</a>
-					<a href="works/unimedodonto.html" class="col span_1_of_4">
-						<div class="work unimedodonto">
-							<h2>Unimed Odonto</h2>
-							<span class="main-tag">Web</span>
-						</div>
-					</a>
-					<a href="works/correclico.html" class="col span_1_of_4">
-						<div class="work correclico">
-							<h2>Corre Clicô</h2>
-							<span class="main-tag">HTML5</span>
+							<h2 lang="pt">Toque do Chef</h2>
+							<h2 lang="en">Toque do Chef (Chef's Touch)</h2>
+							<span class="main-tag">HTML5 / Javascript</span>
 						</div>
 					</a>
 				</div>
 				<div class="section group">
-					<a href="works/contesuahistoria.html" class="col span_1_of_4">
-						<div class="work contesuahistoria">
-							<h2>Conte sua História</h2>
-							<span class="main-tag">Unity3D</span>
-						</div>
-					</a>
-					<a href="works/aquapiratas.html" class="col span_1_of_4">
-						<div class="work aquapiratas">
-							<h2>AquaPiratas</h2>
-							<span class="main-tag">HTML5</span>
-						</div>
-					</a>
-					<a href="works/sitefarofastudios.html" class="col span_1_of_4">
-						<div class="work sitefarofastudios">
-							<h2>Site Farofa Studios</h2>
-							<span class="main-tag">Web</span>
-						</div>
-					</a>
-					<a href="works/cidadedosblocos.html" class="col span_1_of_4">
-						<div class="work cidadedosblocos">
-							<h2>Cidade dos Blocos</h2>
-							<span class="main-tag">HTML5</span>
-						</div>
-					</a>
-				</div>
-				<div class="section group">
-					<a href="works/pistaradical.html" class="col span_1_of_4">
-						<div class="work pistaradical">
-							<h2>Pista Radical</h2>
-							<span class="main-tag">HTML5</span>
-						</div>
-					</a>
-					<a href="works/sitegrok.html" class="col span_1_of_4">
-						<div class="work sitegrok">
-							<h2>Site Grok</h2>
-							<span class="main-tag">Web</span>
-						</div>
-					</a>
-					<a href="works/quiztodalinda.html" class="col span_1_of_4">
-						<div class="work quiztodalinda">
-							<h2>Quiz Toda Linda Vale Mirim</h2>
-							<span class="main-tag">Web</span>
+					<a href="works/gatopolis.html" class="col span_4_of_4">
+						<div class="work gatopolis">
+							<h2 lang="pt">Gatópolis 2.0</h2>
+							<h2 lang="en">Gatópolis 2.0 (Cat City)</h2>
+							<span class="main-tag">Unity3D / C#</span>
 						</div>
 					</a>
 				</div>
 			</div>
 			<footer>
 				<div class="centralizer">
-					<span class="fa fa-envelope"> </span> <a href="mailto:lbittencs@gmail.com">lbittencs@gmail.com</a> 
+					<span class="fa fa-envelope"> </span> <a href="mailto:lbittencs@gmail.com">lbittencs@gmail.com</a>
 					<span class="spacer"> </span>
 					<span class="fa fa-github"> </span> <a target="_blank" href="http://github.com/lukebitts">GitHub</a>
 					<span class="spacer"> </span>
 					<span class="fa fa-location-arrow"> </span> São Paulo, Brasil.
-					<p class="copyright">© Todos os direitos reservados.</p>
+					<!--<p class="copyright" lang="pt">© Todos os direitos reservados.</p>
+					<p class="copyright" lang="en">© All rights reserved.</p>-->
 				</div>
 			</footer>
 		</div>
