--- a/about.html
+++ b/about.html
@@ -11,12 +11,15 @@
 		<!-- @todo Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico">
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-		
+
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/grid/col.css">
 		<link rel="stylesheet" type="text/css" href="css/grid/4cols.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
+
+		<script src="js/lang.js" type="text/javascript"></script>
 	</head>
 	<body>
 
@@ -27,27 +30,41 @@
 						<span class="fa fa-code fa-3x"> </span>
 					</div>
 					<h1>Lucas Bittencourt</h1>
-					<nav>
+					<nav lang="pt">
 						<a href="index.html">Trabalhos</a><span>/</span>
 						<a href="about.html">Sobre</a><span>/</span>
 						<a href="contact.html">Contato</a>
 					</nav>
+					<nav lang="en">
+						<a href="index.html">Works</a><span>/</span>
+						<a href="about.html">About</a><span>/</span>
+						<a href="contact.html">Contact</a>
+					</nav>
+					<div id="language-pick">
+						<a href="#" id="lang-pt">Português</a>
+						/
+						<a href="#" id="lang-en">English</a>
+					</div>
 				</header>
 				<div class="section group">
 					<div id="about" class="col span_2_of_4">
-						<h2>Sobre</h2>
-						<p>
+						<h2 lang="pt">Sobre</h2>
+						<h2 lang="en">About</h2>
+						<p lang="pt">
 							Nascido e criado em São Paulo, formado Técnico em Informática pela ETEC Camargo Aranha e Tecnólogo em Desenvolvimento de Jogos pela FATEC São Caetano do Sul.
-							Apaixonado por jogos desde criança, apaixonado por criação digital desde que tinha idade suficiente para entender e usar o FrontPage.  
+							Apaixonado por jogos desde "Hocus Pocus", apaixonado por criação digital desde que tinha idade suficiente para entender e usar o FrontPage.
 						</p>
-						<h2>Ferramentas</h2>
-						<p>
-							De todas as linguagens de programação que tive o prazer de conhecer, C++ é definitivamente minha favorita. A maioria dos meus projetos pessoais é escrita em C++ e
-							mesmo conhecendo as vantagens e facilidades de outras linguagens que C++ não oferece, eu sempre acabo voltando para ela. Apesar disso, quando o assunto é projetos
-							profissionais minha escolha é sempre pragramática, Unity3D e C# para o desenvolvimento de jogos e aplicativos iOS/Android e Construct2 para desenvolvimento de jogos HTML5. 
+						<p lang="en">
+							Born and raised in São Paulo, graduated a Computer Technician by ETEC Camargo Aranha and an associate degree in Game Development by FATEC São Caetano do Sul.
+							In love with games since "Hocus Pocus", in love with digital creation since I was old enough to understand and use Microsoft FrontPage.
 						</p>
-						<p>
-							Algumas outras linguagens/tecnologias que já utilizei incluem Java, Python, MySQL, PHP, HTML5 e Javascript.
+						<h2 lang="pt">Ferramentas</h2>
+						<h2 lang="en">Tools</h2>
+						<p lang="pt">
+							Algumas linguagens/tecnologias que já utilizei incluem C++, Rust, C#, Java, Python, MySQL, PHP, HTML5, entre outras.
+						</p>
+						<p lang="en">
+							Some of the languages/technologies I have used: C++, Rust, C#, Java, Python, MySQL, PHP, HTML5, among others.
 						</p>
 					</div>
 					<div id="profile-pic" class="col span_2_of_4">
@@ -57,12 +74,12 @@
 			</div>
 			<footer>
 				<div class="centralizer">
-					<span class="fa fa-envelope"> </span> <a href="mailto:lbittencs@gmail.com">lbittencs@gmail.com</a> 
+					<span class="fa fa-envelope"> </span> <a href="mailto:lbittencs@gmail.com">lbittencs@gmail.com</a>
 					<span class="spacer"> </span>
 					<span class="fa fa-github"> </span> <a target="_blank" href="http://github.com/lukebitts">GitHub</a>
 					<span class="spacer"> </span>
 					<span class="fa fa-location-arrow"> </span> São Paulo, Brasil.
-					<p class="copyright">© Todos os direitos reservados.</p>
+					<!--<p class="copyright">© Todos os direitos reservados.</p>-->
 				</div>
 			</footer>
 		</div>
