--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,15 @@
 		<!-- @todo Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico">
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-		
+
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/grid/col.css">
 		<link rel="stylesheet" type="text/css" href="css/grid/4cols.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
+
+		<script src="js/lang.js" type="text/javascript"></script>
 	</head>
 	<body>
 
@@ -27,29 +30,43 @@
 						<span class="fa fa-code fa-3x"> </span>
 					</div>
 					<h1>Lucas Bittencourt</h1>
-					<nav>
+					<nav lang="pt">
 						<a href="index.html">Trabalhos</a><span>/</span>
 						<a href="about.html">Sobre</a><span>/</span>
 						<a href="contact.html">Contato</a>
 					</nav>
+					<nav lang="en">
+						<a href="index.html">Works</a><span>/</span>
+						<a href="about.html">About</a><span>/</span>
+						<a href="contact.html">Contact</a>
+					</nav>
+					<div id="language-pick">
+						<a href="#" id="lang-pt">Português</a>
+						/
+						<a href="#" id="lang-en">English</a>
+					</div>
 				</header>
 				<div class="section group">
 					<div id="contact" class="col span_4_of_4">
-						<h2>Contato</h2>
-						<p>
-							Envie um email para <a href="mailto:lbittencs@gmail.com">lbittencs@gmail.com</a> para falar comigo.  
+						<h2 lang="pt">Contato</h2>
+						<h2 lang="en">Contact</h2>
+						<p lang="pt">
+							Envie um email para <a href="mailto:lbittencs@gmail.com">lbittencs@gmail.com</a> para falar comigo.
+						</p>
+						<p lang="en">
+							Send an email to <a href="mailto:lbittencs@gmail.com">lbittencs@gmail.com</a>.
 						</p>
 					</div>
 				</div>
 			</div>
 			<footer>
 				<div class="centralizer">
-					<span class="fa fa-envelope"> </span> <a href="mailto:lbittencs@gmail.com">lbittencs@gmail.com</a> 
+					<span class="fa fa-envelope"> </span> <a href="mailto:lbittencs@gmail.com">lbittencs@gmail.com</a>
 					<span class="spacer"> </span>
 					<span class="fa fa-github"> </span> <a target="_blank" href="http://github.com/lukebitts">GitHub</a>
 					<span class="spacer"> </span>
 					<span class="fa fa-location-arrow"> </span> São Paulo, Brasil.
-					<p class="copyright">© Todos os direitos reservados.</p>
+					<!--<p class="copyright">© Todos os direitos reservados.</p>-->
 				</div>
 			</footer>
 		</div>
