--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		<link rel="stylesheet" type="text/css" href="css/works.css">
 
 		<script src="js/lang.js" type="text/javascript"></script>
+		<script src="https://code.jquery.com/jquery-1.11.3.min.js" type="text/javascript"></script>
+		<script src="js/mail.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div class="content">
@@ -100,6 +102,7 @@
 		</div>
 		<script type="text/javascript">
 			DomLoaded();
+			sendMail();
 		</script>
 	</body>
 </html>
