--- a/cotm2/index.html
+++ b/cotm2/index.html
@@ -1,12 +1,57 @@
-<!DOCTYPE html><html lang="en"><head>
-  <meta charset="utf-8">
-  <title>CotmFront</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>@import"https://fonts.googleapis.com/css?family=Open+Sans:300,700|Quattrocento:700";:root{--strenght:darkred;--control:#4d84ff;--sleight:green;--perception:lemonchiffon;--intuition:purple;--knowledge:lightblue;--confidence:gold;--manipulation:lightgreen;--charisma:pink;--failure:rgb(155, 56, 26);--success:rgb(96 167 68);--accent1:rgb(232 87 62);--accent2:rgb(232 87 62)}body{font-family:Open Sans,sans-serif;font-weight:lighter;background:black;color:#fff;margin:0;user-select:none;-webkit-user-select:none;-ms-user-select:none;-webkit-touch-callout:none;-o-user-select:none;-moz-user-select:none}</style><link rel="stylesheet" href="styles.a9720cb6d4e139c0.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.a9720cb6d4e139c0.css"></noscript></head>
-<body>
-  <app-root></app-root>
-<script src="runtime.5e2fa50613041cfd.js" type="module"></script><script src="polyfills.506c6d1a72995fda.js" type="module"></script><script src="scripts.0d01a4218767d0db.js" defer></script><script src="main.edec993f74f2bba8.js" type="module"></script>
+<!DOCTYPE html>
+<html lang="en">
 
-</body></html>
+<head>
+    <meta charset="utf-8">
+    <title>CotmFront</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <style>
+        @import"https://fonts.googleapis.com/css?family=Open+Sans:300,700|Quattrocento:700";
+
+        :root {
+            --strenght: darkred;
+            --control: #4d84ff;
+            --sleight: green;
+            --perception: lemonchiffon;
+            --intuition: purple;
+            --knowledge: lightblue;
+            --confidence: gold;
+            --manipulation: lightgreen;
+            --charisma: pink;
+            --failure: rgb(155, 56, 26);
+            --success: rgb(96 167 68);
+            --accent1: rgb(232 87 62);
+            --accent2: rgb(232 87 62)
+        }
+
+        body {
+            font-family: Open Sans, sans-serif;
+            font-weight: lighter;
+            background: black;
+            color: #fff;
+            margin: 0;
+            user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
+            -webkit-touch-callout: none;
+            -o-user-select: none;
+            -moz-user-select: none
+        }
+    </style>
+    <link rel="stylesheet" href="/styles.a9720cb6d4e139c0.css" media="print" onload="this.media='all'"><noscript>
+        <link rel="stylesheet" href="/styles.a9720cb6d4e139c0.css">
+    </noscript>
+</head>
+
+<body>
+    <app-root></app-root>
+    <script src="/runtime.5e2fa50613041cfd.js" type="module"></script>
+    <script src="/polyfills.506c6d1a72995fda.js" type="module"></script>
+    <script src="/scripts.0d01a4218767d0db.js" defer></script>
+    <script src="/main.edec993f74f2bba8.js" type="module"></script>
+
+</body>
+
+</html>
