--- a/cotm2/index.html
+++ b/cotm2/index.html
@@ -40,17 +40,17 @@
             -moz-user-select: none
         }
     </style>
-    <link rel="stylesheet" href="/styles.a9720cb6d4e139c0.css" media="print" onload="this.media='all'"><noscript>
-        <link rel="stylesheet" href="/styles.a9720cb6d4e139c0.css">
+    <link rel="stylesheet" href="cotm2/styles.a9720cb6d4e139c0.css" media="print" onload="this.media='all'"><noscript>
+        <link rel="stylesheet" href="cotm2/styles.a9720cb6d4e139c0.css">
     </noscript>
 </head>
 
 <body>
     <app-root></app-root>
-    <script src="/runtime.5e2fa50613041cfd.js" type="module"></script>
-    <script src="/polyfills.506c6d1a72995fda.js" type="module"></script>
-    <script src="/scripts.0d01a4218767d0db.js" defer></script>
-    <script src="/main.edec993f74f2bba8.js" type="module"></script>
+    <script src="cotm2/runtime.5e2fa50613041cfd.js" type="module"></script>
+    <script src="cotm2/polyfills.506c6d1a72995fda.js" type="module"></script>
+    <script src="cotm2/scripts.0d01a4218767d0db.js" defer></script>
+    <script src="cotm2/main.edec993f74f2bba8.js" type="module"></script>
 
 </body>
 
