--- a/cotm3/index.html
+++ b/cotm3/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html><html lang="en"><head>
-  <meta charset="utf-8">
-  <title>CotmFront</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>@import"https://fonts.googleapis.com/css?family=Open+Sans:300,700|Quattrocento:700";:root{--strenght:darkred;--control:#4d84ff;--sleight:green;--perception:lemonchiffon;--intuition:purple;--knowledge:lightblue;--confidence:gold;--manipulation:lightgreen;--charisma:pink;--failure:rgb(155, 56, 26);--success:rgb(96 167 68);--accent1:rgb(232 87 62);--accent2:rgb(232 87 62)}body{font-family:Open Sans,sans-serif;font-weight:lighter;background:black;color:#fff;margin:0;user-select:none;-webkit-user-select:none;-ms-user-select:none;-webkit-touch-callout:none;-o-user-select:none;-moz-user-select:none;touch-action:manipulation}</style><link rel="stylesheet" href="/cotm3/styles.0023aed10280c149.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/cotm3/styles.0023aed10280c149.css"></noscript></head>
+    <meta charset="utf-8">
+    <title>CotmFront2</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+<style>@import"https://fonts.googleapis.com/css?family=Open+Sans:300,700|Quattrocento:700";:root{--main:rgb(232,87,62);--main-darker:#d9361a;--complementary:#3ecfe8;--analog1:#e8ac3e;--analog2:#e83e7a;--success:#3ee885;--failure:var(--main-darker);--main-text:white;--secondary-text:#aaa;--background:#111;--background-low-contrast:#444;--physical:#E4E0D4;--mental:#95AA97;--social:#E87B54;--strenght:var(--physical);--control:var(--physical);--sleight:var(--physical);--perception:var(--mental);--intuition:var(--mental);--knowledge:var(--mental);--confidence:var(--social);--manipulation:var(--social);--charisma:var(--social)}body{font-size:16px;font-family:Open Sans,sans-serif;font-weight:lighter;background:var(--background);color:var(--main-text);margin:0;user-select:none;-webkit-user-select:none;-ms-user-select:none;-webkit-touch-callout:none;-o-user-select:none;-moz-user-select:none;touch-action:manipulation}</style><link rel="stylesheet" href="/cotm3/styles.d1484acd21054b73.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/cotm3/styles.d1484acd21054b73.css"></noscript></head>
+
 <body>
-  <app-root></app-root>
-<script src="/cotm3/runtime.5e2fa50613041cfd.js" type="module"></script>
-<script src="/cotm3/polyfills.506c6d1a72995fda.js" type="module"></script>
-<script src="/cotm3/scripts.b2e675a81a6caa19.js" defer></script>
-<script src="/cotm3/main.7dee2d79a338c340.js" type="module"></script>
+    <app-root></app-root>
+<script src="/cotm3/runtime.7a5928a719a5a598.js" type="module"></script><script src="/cotm3/polyfills.0d6ea4f2c748d7b1.js" type="module"></script><script src="/cotm3/scripts.d1c37b45a6f496d4.js" defer></script><script src="/cotm3/main.05a6a17a35cc9d37.js" type="module"></script>
 
 </body></html>
